--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
   const style = document.createElement('style');
   style.innerHTML = `
     @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@750&display=swap');
+    
+    body, html { 
+      margin: 0; 
+      padding: 0; 
+      height: 100%; 
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      background-color: #121212;
+    }
+
     #t { 
       font-family: 'Nunito', sans-serif; 
-      font-weight: 750; 
+      font-weight: 500; 
+      color: white;
+      text-align: center;
+      font-size: 5rem;
+      line-height: 1.2;
+    }
+
+    @media (max-width: 600px) {
+      #t { font-size: 2.5rem; }
     }
   `;
   document.head.appendChild(style);
-  
+
 setInterval(_ => {
   const now = new Date();
   let m = now.getUTCMonth();
